# efg-mems

./: CMakeLists.txt  Makefile  README.md  bdbwt2brindex.hpp  efg-mems.cpp
